package com.example.tracklayoff.designsystems

const val AppTopBarText = "Layoff Tracker"

// Dialog Alert Phone Sign in
const val PhoneDialogHeader = "Enter phone number"
const val PhoneDialogSendCode = "Send Code"
const val AppAlertDialogCancelText = "Cancel"
const val PhoneDialogContentTitle = "Enter your phone number with country code to receive a verification code."
const val PhoneDialogContentPlaceholder = "+1 650 555 0100"

// Dialog Alert OTP verification
const val OtpVerificationHeader = "Enter verification code"
const val OtpVerificationButtonText = "Verify"
const val OtpDialogPlaceHolderText = "123456"