...
        Button(
            onClick = { onSignInClick(AuthProviderClientType.GOOGLE) },
            modifier = Modifier
                .fillMaxWidth()
                .height(AppDimens.GoogleSignInBtnHeight)
        ) {
            Text(text = "Sign in with Google")
        }

        Spacer(modifier = Modifier.height(AppDimens.AuthBottomSheetBottomSpacing))

        Button(
            onClick = { onSignInClick(AuthProviderClientType.PHONE) } ,
            modifier = Modifier
                .fillMaxWidth()
                .height(AppDimens.GoogleSignInBtnHeight)
        ) {
            Text(text = "Sign in with Phone")
        }
    }
}
