...
                Button(
                    onClick = onClickAction,
                    modifier = Modifier
                        .width(AppDimens.ButtonWidth)
                        .height(AppDimens.GoogleSignInBtnHeight)
                ) {
                    Text(text = "Sign in")
                }
            }
        }
    }
}
